kubernetes/applications/mealie/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mealie
  namespace: apps
spec:
  selector:
    matchLabels:
      app: mealie
  serviceName: "mealie"
  replicas: 1
  template:
    metadata:
      labels:
        app: mealie
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.19.1
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
              ephemeral-storage: 4Gi
            limits:
              memory: 1Gi
              ephemeral-storage: 4Gi
          ports:
            - containerPort: 9000
              name: web
          volumeMounts:
            - name: mealie-data
              mountPath: /app/data
  volumeClaimTemplates:
    - metadata:
        name: mealie-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "openebs"
        resources:
          requests:
            storage: 8Gi
