kubernetes/applications/mealie/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie-http-route
  namespace: apps
  annotations:
    gethomepage.dev/description: Our Recipes
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Homelab
    gethomepage.dev/icon: https://raw.githubusercontent.com/mealie-recipes/mealie/refs/heads/mealie-next/frontend/public/icon.png
    gethomepage.dev/name: Mealie
    gethomepage.dev/pod-selector: "app=mealie"
    gethomepage.dev/href: "https://recipes.mcmumf.dev"
  labels:
    app: mealie
spec:
  parentRefs:
    - name: external-gateway
      namespace: kube-system
  hostnames:
    - "recipes.mcmumf.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mealie-svc
          port: 9000
