kubernetes/applications/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: "10g"
    nginx.org/client-max-body-size: "10g"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - recipes.mcmumf.dev
      secretName: recipes-cert
  rules:
    - host: recipes.mcmumf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie-svc
                port:
                  number: 9000
